--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -2,51 +2,40 @@
 
   <form id="formulario" [formGroup]="invoicesForm" (submit)="buscarInvoices()">
 
-    <p style="text-align: center; margin: 2%;">
-      <mat-icon>info</mat-icon> Dica: É obrigatório selecionar Marca e Coleção para consultar Faturamentos.
-    </p>
-
     <mat-vertical-stepper id="stepper" linear #stepper>
 
       <!-- MARCA -->
-      <mat-step Control="invoicesForm" optional="false" [completed]="selecionouMarca">
+      <mat-step Control="invoicesForm" [completed]="selecionouMarca">
         <ng-template matStepLabel>Marca {{ brandName }}</ng-template>
         <!---------------- DDL MARCA ------------------->
         <mat-form-field id="marca">
-          <mat-label>Marca*</mat-label>
-          <mat-select class="form-group" formControlName="brand" placeholder="Marca" #marcaValue
+          <mat-label>Marca</mat-label>
+          <mat-select required class="form-group" formControlName="brand" placeholder="Marca" #marcaValue
             (selectionChange)="mudarMarca($event.value)">
             <mat-option *ngFor="let marca of marcas" (click)="brandName = marca.brand_name" [value]="marca.brand_Id">
               {{ marca.brand_name }}</mat-option>
           </mat-select>
+          <mat-hint>Campo obrigatório</mat-hint>
         </mat-form-field>
-        <button type="button" class="botao-baixo" mat-raised-button color="accent" matStepperNext>
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
       </mat-step>
 
       <!-- COLEÇÃO -->
-      <mat-step optional="false" [completed]="selecionouColecao">
+      <mat-step [completed]="selecionouColecao">
         <ng-template matStepLabel>Coleção {{ collectionName }}</ng-template>
         <!---------------- DDL COLEÇÃO ------------------->
         <mat-form-field id="colecao">
-          <mat-label>Coleção*</mat-label>
-          <mat-select class="form-group" formControlName="collection" placeholder="Coleção" #colecaoValue
+          <mat-label>Coleção</mat-label>
+          <mat-select required class="form-group" formControlName="collection" placeholder="Coleção" #colecaoValue
             (selectionChange)="mudarColecao($event.value)">
             <mat-option *ngFor="let colecao of colecoes" (click)="collectionName = colecao.collection_name"
               [value]="colecao.collection_Id">{{ colecao.collection_name }}</mat-option>
           </mat-select>
+          <mat-hint>Campo obrigatório</mat-hint>
         </mat-form-field>
-        <button type="button" class="botao-cima" mat-raised-button color="accent" matStepperPrevious>
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button type="button" class="botao-baixo" mat-raised-button color="accent" matStepperNext>
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
       </mat-step>
 
       <!-- ORDENAR -->
-      <mat-step optional="true">
+      <mat-step>
         <ng-template matStepLabel>Ordenar {{ orderByName }}</ng-template>
         <!------------------------ DDL ORDENAR ------------------------------>
         <mat-form-field id="ordem">
@@ -61,17 +50,12 @@
             <mat-option value="7">A - Z</mat-option>
             <mat-option value="8">Z - A</mat-option>
           </mat-select>
+          <mat-hint>Opcional</mat-hint>
         </mat-form-field>
-        <button type="button" class="botao-cima" mat-raised-button color="accent" matStepperPrevious>
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button type="button" class="botao-baixo" mat-raised-button color="accent" matStepperNext>
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
       </mat-step>
 
       <!-- RAZÃO SOCIAL -->
-      <mat-step optional="true">
+      <mat-step>
         <ng-template matStepLabel>Razão Social {{ razaoSocial }}</ng-template>
         <!------------------------ CAMPO RAZÃO SOCIAL ------------------------->
         <mat-form-field id="razao-social" (keyup)="companyName = $event.target.value" (keyup)="buscarClientes()">
@@ -86,44 +70,29 @@
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-        <button type="button" class="botao-cima" mat-raised-button color="accent" matStepperPrevious>
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button type="button" class="botao-baixo" mat-raised-button color="accent" matStepperNext>
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
+        <mat-hint>Opcional</mat-hint>
       </mat-step>
 
       <!-- CNPJ -->
-      <mat-step optional="true">
+      <mat-step>
         <ng-template matStepLabel>CNPJ {{ companyDoc }}</ng-template>
         <!---------------------- CAMPO CNPJ ------------------------->
         <mat-form-field id="cnpj" (keyup)="companyDoc = $event.target.value">
           <mat-label>CNPJ</mat-label>
           <input type="text" matInput [value]="companyDoc">
         </mat-form-field>
-        <button type="button" class="botao-cima" mat-raised-button color="accent" matStepperPrevious>
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button type="button" class="botao-baixo" mat-raised-button color="accent" matStepperNext>
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
+        <mat-hint>Opcional</mat-hint>
       </mat-step>
 
       <!-- CÓDIGO -->
-      <mat-step optional="true">
+      <mat-step>
         <ng-template matStepLabel>Código {{ customerFabId }}</ng-template>
         <!---------------------- CAMPO CÓDIGO ------------------------->
         <mat-form-field id="codigo" (keyup)="customerFabId = $event.target.value">
           <mat-label>Código</mat-label>
           <input type="text" matInput [value]="customerFabId">
         </mat-form-field>
-        <button type="button" class="botao-cima" mat-raised-button color="accent" matStepperPrevious>
-          <mat-icon>arrow_upward</mat-icon>
-        </button>
-        <button type="button" class="botao-reset" mat-raised-button color="accent" (click)="stepper.reset()">
-          <mat-icon>block</mat-icon>
-        </button>
+        <mat-hint>Opcional</mat-hint>
       </mat-step>
     </mat-vertical-stepper>
 
@@ -138,8 +107,8 @@
 
     <!---------------------- BOTAO PESQUISAR --------------------->
     <button mat-raised-button color="accent" id="botao-buscar" type="submit" [disabled]="invoicesForm.invalid"
-      (click)="scroll(target)" (click)="company_doc = cnpjDigitado" (click)="buscarInvoices()">
-      <strong>BUSCAR FATURAMENTOS </strong>
+      (click)="scroll(target)" (click)="company_doc = cnpjDigitado" (click)="buscarInvoices()" style="color: white;">
+      BUSCAR&nbsp;
       <mat-icon>search</mat-icon>
     </button>
 
@@ -148,20 +117,22 @@
   <!--------------------- CARDS FATURAMENTOS ---------------------->
   <mat-card id="cardTotal" *ngIf="consultado" class="mat-elevation-z8">
     <mat-card-title>
-      <mat-icon>poll</mat-icon> Total
+      <mat-icon>monetization_on</mat-icon> Total
     </mat-card-title>
     <mat-card-content>
-      <strong>Qtde Fat:</strong><br> {{ total.sum_total_quantity_invoiced | number: '1.0-0' | replace:',':'.' }}
-      <br>
-      <strong>Vr Fat:</strong><br>
-      {{ total.sum_total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' | replace:',':'.' }}
+      <div id="cardTotalMedio">
+        <strong>Qtde Fat:<br></strong> <p style="font-size: 1.4rem;">{{ total.sum_total_quantity_invoiced | number: '1.0-0' | replace:',':'.' }}</p>
+      </div>
+      <div id="cardTotalMedio">
+      <strong>Vr Fat:<br></strong> <p style="font-size: 1.4rem;">{{ total.sum_total_price_invoiced&nbsp; | currency: 'BRL' : 'R$&nbsp;' : '1.0-0' | replace:',':'.' | replace:',':'.' }}</p>
+      </div>
     </mat-card-content>
   </mat-card>
 
   <div id="botao-mostrar-todos" *ngIf="consultado">
     <mat-slide-toggle [(ngModel)]="mostrarTodosOsFaturamentos" color="accent">
       <span style="font-weight: bold; font-size: 1.2rem;">
-        Mostrar todos os faturamentos
+        Detalhar
       </span>
     </mat-slide-toggle>
   </div>
@@ -172,7 +143,7 @@
         <mat-icon color="primary">account_box</mat-icon> {{ invoice.customer_name }}
       </mat-card-title>
       <mat-card-content>
-        <div id="cardsFaturamentosGrande"><mat-icon color="accent">work</mat-icon><strong> NF: </strong>{{ invoice.invoice }} - {{ invoice.dt_invoice }}</div>
+        <div id="cardsFaturamentosGrande"><mat-icon color="primary">work</mat-icon><strong> NF: </strong>{{ invoice.invoice }} - {{ invoice.dt_invoice }}</div>
         <div id="cardsFaturamentosMedio"><strong>Ped Linx:</strong> {{ invoice.orderFactory_Id }}</div>
         <div id="cardsFaturamentosMedio"><strong>Ped Wise:</strong> {{ invoice.order_Id }}</div>
         <div id="cardsFaturamentosPequeno">
@@ -185,13 +156,13 @@
           <strong>%<br></strong>{{ invoice.total_quantity_invoiced / invoice.total_quantity * 100 | number: '1.0-0' | replace:',':'.' }}
         </div>
         <div id="cardsFaturamentosPequeno">
-          <strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}
+          <strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' : 'R$&nbsp;' : '1.0-0' | replace:',':'.' }}
         </div>
         <div id="cardsFaturamentosPequeno">
-          <strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}
+          <strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' : 'R$&nbsp;' : '1.0-0' | replace:',':'.' }}
         </div>
         <div id="cardsFaturamentosPequeno">
-          <strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}
+          <strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' : 'R$&nbsp;' : '1.0-0' | replace:',':'.' }}
         </div>
         <div id="cardsFaturamentosPequeno">
           <strong>%<br></strong>{{ invoice.total_price_invoiced / invoice.total_price * 100 | number: '1.0-0' | replace:',':'.' }}
