--- a/src/app/login/dialog-error/dialog-error.component.html
+++ b/src/app/login/dialog-error/dialog-error.component.html
@@ -7,7 +7,7 @@
         mat-raised-button 
         mat-dialog-close 
         color="accent">
-        <strong> Fechar </strong>
+        Fechar&nbsp;
         <mat-icon>close</mat-icon>
         </button>
     </mat-dialog-actions>
