--- a/src/tema.scss
+++ b/src/tema.scss
@@ -1,11 +1,20 @@
 @import '~@angular/material/theming';
-
 @include mat-core();
 
-$primary: mat-palette($mat-grey, 900, A700);
-$accent: mat-palette($mat-orange);
+$primary: mat-palette($mat-grey, 900);
+$accent: mat-palette($mat-grey, A700);
 $warn: mat-palette($mat-red);
+$tema-light: mat-light-theme($primary, $accent, $warn);
 
-$tema: mat-light-theme($primary, $accent, $warn);
+$primary: mat-palette($mat-grey, 900);
+$accent: mat-palette($mat-grey, A700);
+$warn: mat-palette($mat-red);
+$tema-dark: mat-dark-theme($primary, $accent, $warn);
 
-@include angular-material-theme($tema)
+.tema-light {
+    @include angular-material-theme($tema-light);
+}
+
+.tema-dark {
+    @include angular-material-theme($tema-dark);
+}
