--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
-* { margin: 0; padding: 0; }
-html, body { height: 100%; }
-body { font-family: Roboto, "Helvetica Neue", sans-serif}
+* { 
+    margin: 0; 
+    padding: 0; 
+}
+body { 
+    height: 100vh; 
+    font-family: Roboto, sans-serif
+}
+.content {
+    height: 100vh;
+}
