Ajustes tela de Duplicatas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,9 @@
             <mat-icon>file_copy</mat-icon> Duplicatas
           </mat-list-item>
         </a>
-        <mat-slide-toggle id="tema" [(ngModel)]="temaEscuro" (change)="onThemeChange()" placeholder="Tema">
+        <!-- <mat-slide-toggle id="tema" [(ngModel)]="temaEscuro" (change)="onThemeChange()" placeholder="Tema">
           Tema escuro
-        </mat-slide-toggle>
+        </mat-slide-toggle> -->
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
