--- a/src/app/duplicates/duplicates.component.html
+++ b/src/app/duplicates/duplicates.component.html
@@ -22,7 +22,29 @@
         </mat-card-title>
         <mat-card-content>
             <strong>DíVIDA TOTAL:</strong> R$ 341.000<br>
-            <strong>DíVIDA A VENCER:</strong> R$ 1.340.000
+            <strong>DíVIDA A VENCER:</strong> R$ 1.340.000<br>
+            <table class="tabela">
+                <tr>
+                    <th><strong>MARCA</strong></th>
+                    <th><strong>VENCIDO</strong></th>
+                    <th><strong>A VENCER</strong></th>
+                </tr>
+                <tr>
+                    <td>BRAND ONE</td>
+                    <td>BRAND TWO</td>
+                    <td>BARND THREE</td>
+                </tr>
+                <tr>
+                    <td>Vencido: R$ 300.000</td>
+                    <td>Vencido: R$ 41.000</td>
+                    <td>Vencido: R$ 90.000</td>
+                </tr>
+                <tr>
+                    <td>A Vencer: R$ 0,00</td>
+                    <td>A Vencer: R$ 0,00</td>
+                    <td>A Vencer: R$ 10.000,00</td>
+                </tr>
+            </table>
         </mat-card-content>
     </mat-card>
     
